# option-mgmt-2026

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: .gitkeep  ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  deps.py  main.py
apps/api/app/core/: __init__.py  config.py  logging.py  security.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 0001_init.py  0002_dd_unique_user_hash.py  0003_imp_unique_constraints.py  0004_yearline_context.py  0005_yearline_trend_series.py
apps/api/app/jobs/: __init__.py  ingest_yearline.py
apps/api/app/routers/: __init__.py  auth.py  data_import.py  engine.py  health.py  market.py  outcomes.py  profile.py
apps/api/app/schemas/: __init__.py  auth.py  data_import.py  decision.py  engine.py  error.py  health.py  market.py  outcome.py  profile.py  yearline.py
apps/api/app/services/: collar_builder_service.py  csv_import_service.py  decision_service.py  inputs_hydration_service.py  market_service.py  outcome_service.py  profile_service.py  yearline_hydration_service.py  yearline_panel_service.py
apps/api/tests/: conftest.py  test_auth.py  test_engine_collar_builder.py  test_engine_endpoints.py  test_engine_readonly_endpoints.py  test_engine_strike_execution.py  test_health.py  test_m1_17_endpoints.py  test_smoke_e2e.py  test_smoke_engine.py  test_smoke_m1_17.py  test_smoke_m1_17_5.py  test_smoke_yearline.py  test_smoke_yearline_panel.py  test_yearline_ingest.py  test_yearline_panel.py
apps/api/tests/fixtures/yearline/: fixture_msft_trend_series.json  fixture_stale_empty.json  fixture_unavailable_trend_series.json  yearline_trend_series_schema.json
apps/jobs/: .gitkeep
apps/web/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/lib/: api.ts  decision-types.ts  format.ts  outcome-form.ts  outcome-types.ts  personas.ts  regime-meta.ts  strategy-labels.ts  utils.ts  yearline-types.ts
apps/web/tests/: disclaimer-gate-persistence.test.tsx  disclaimer-gate.test.tsx  utils.test.ts
docs/: .gitkeep  README.md  architecture.md  disclaimers.md  engineering-principles.md  ssot-constants-map.md
docs/decisions/: 0001-engine-first-architecture.md  0002-regime-taxonomy.md  0003-confidence-composer-multiplicative.md  0004-disclaimer-fail-open.md  0005-engine-pure-function-discipline.md  0006-rfc-7807-error-envelope.md  0007-python-version-pin.md  0008-enhancement-adoption-roadmap.md  0009-adopt-yearline-statistical-context-provider.md  README.md
docs/enhancements/: 0001-assessment-and-adoption-decisions.md  0002-yearline-context-assessment.md  04-msft-engine-enhancement-spec-0509.md  README.md
docs/enhancements/yearline/: README.md  assessment.md  integration_design_and_plan.md  two_repo_strategy_and_deployment.md
docs/phased-design/: README.md  msft-option-risk-management-engine-phased-plan.md
docs/phased-design/phase-1/: README.md  m1.0-m1.14-shipped-summary.md  m1.11a-collar-builder-engine.md  m1.11b-collar-builder-integration.md  m1.15-engine-readonly-endpoints.md  m1.16-strike-execution-endpoints.md  m1.16a-collar-builder-api-endpoint.md  m1.17-profile-outcomes-csv-import.md  m1.18-today-screen-scaffolding.md  m1.19-action-list-execution-badge.md  m1.20-confidence-chart-execution-panel.md  m1.21-watch-levels-drawer.md  m1.22-profile-ui-persona-presets.md  m1.23-outcome-tracker.md  m1.24-master-decision-goldens.md
docs/thread-transition/hyperagent/: README.md  learning-suggestions.md  (+1 more)
docs/thread-transitions/: 2026-05-10-t01-phase0-foundation-and-phase1-m1.1-to-m1.3.md  2026-05-13-t02-m1.16a-collar-builder-endpoint.md  2026-05-13-t03-m1.11b-doc-sync.md  2026-06-10-t04-m1.24-golden-suite.md  README.md  _template.md
docs/tutorials/: README.md  collar-builder.md  confidence-composer.md  engine-api-reference.md  flow-score-engine.md  market-state-engine.md  master-decision-engine.md  scoring-primitives.md
docs/z_temp/: fix_findings_m1.24_goldens.md  local_steps_m1.24.md  test_06092026.md
scripts/: .gitkeep  check_changelog_entry.sh  check_engine_version_bump.sh  check_next_version.sh  check_no_broker_imports.sh  run_smoke.sh  seed_local.py
seeds/csv/: .gitkeep
(+88 files in other folders)
