[project]
name = "option-mgmt-2026"
version = "0.0.1"
description = "MSFT Option Risk Management Engine — monorepo root"
requires-python = ">=3.12"

# This file declares the uv workspace root. It is not a publishable package
# itself; member packages live under apps/ and packages/.

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/jobs",
    "packages/engine",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["packages/engine/tests", "apps/api/tests", "apps/jobs/tests"]
addopts = "-q --strict-markers"
