[project]
name = "option-mgmt-api"
version = "0.0.1"
description = "MSFT Option Risk Management Engine — FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.uv]
package = false
