[project]
name = "option-mgmt-api"
version = "0.0.1"
description = "MSFT Option Risk Management Engine — FastAPI service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = [
    # End-to-end smoke tests (M0.7+) that require a live API + Postgres
    # via SMOKE_API_URL. Skipped by default; run with `make smoke` or
    # `pytest -m smoke` (with SMOKE_API_URL exported).
    "smoke: end-to-end smoke tests requiring a running API (M0.7+)",
]

[tool.ruff]
# Inherit from root pyproject.toml (line-length, target-version, lint rules).
# This block exists so `uv run ruff check .` from apps/api/ uses consistent settings
# even when the user invokes ruff from this directory.
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]
# `tests/` may import from `app/` without explicit `__init__.py` plumbing.
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # late imports for env-var setup before app.main load

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = []
# Allow tests to skip strict typing — testing libraries are heavy on Any.
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
